--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "bgfoundation",
   "version": "0.1.0",
-  "homepage": "https://github.com/scivunum/bgfoundation",
-
+  "homepage": "https://scivunum.github.io/bgfoundation/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
