--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,5 @@
-FRONTEND_URLS=["http://localhost:4173", "http://localhost:5173", "http://192.64.86.227:4173"]
-MONGO_DB_URI='mongodb+srv://raxicompanylimited:YTJvNf2sGbXpNwBP@cluster0.o4wk6is.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
-
-PORT=8005
-
-
-IP=192.168.79.46:9092
-IPDEV=192.168.79.46:9092
+FRONTEND_URLS=["http://localhost:3000","http://localhost:4173"]
+BACKEND_URL=http://localhost:5000
+MONGO_DB_URI='mongodb+srv://raxicompanylimited:YTJvNf2sGbXpNwBP@cluster0.o4wk6is.mongodb.net/'
+PORT=5000
+NODE_ENV=development
