--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/scivunum/bgfoundation#readme",
   "dependencies": {
+    "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
