--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 FRONTEND_URLS=["http://localhost:3000","https://scivunum.github.io/bgfoundation/"]
-MONGO_DB_URI='mongodb+srv://raxicompanylimited:YTJvNf2sGbXpNwBP@cluster0.o4wk6is.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+MONGO_DB_URI='mongodb://localhost:27017/proctoring-db?retryWrites=true&w=majority'
 PORT=5000
